--- a/test/fixtures/profession_tags.yml
+++ b/test/fixtures/profession_tags.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  profession: MyString
+  tag: one
 
 two:
-  profession: MyString
+  tag: two
