--- a/test/fixtures/user_location_tags.yml
+++ b/test/fixtures/user_location_tags.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  user: one
+  location_tag: one
 
 two:
-  name: MyString
+  user: two
+  location_tag: two
